fix spacing and remove code in card.scss

--- a/src/stylesheets/components/_card.scss
+++ b/src/stylesheets/components/_card.scss
@@ -189,7 +189,6 @@ $inner-border-radius: calc(#{$sds-card-border-radius} - #{$sds-card-border-width
   }
 
   &--vertical {
-    text-align: center;
 
     @include at-media('mobile') {
       @include u-display('flex');
